--- a/evoks/theme/templates/modals/create_term.html
+++ b/evoks/theme/templates/modals/create_term.html
@@ -1,3 +1,4 @@
+<!-- should post to term list of corresponding vocabulary-->
 <form action="#" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="fixed z-50 inset-0 overflow-y-auto invisible" aria-labelledby="modal-title" role="dialog"
