--- a/evoks/theme/templates/vocabulary_terms.html
+++ b/evoks/theme/templates/vocabulary_terms.html
@@ -112,7 +112,7 @@
                                                             <td
                                                                 class="px-6 py-4 whitespace-nowrap text-sm text-regal-blue">
                                                                 <a
-                                                                    href="'{% url 'term_detail' name=vocabulary.name %}'">Edit
+                                                                    href='{% url 'term_detail' name=vocabulary.name term_name=term.name|slugify %}'>Edit
                                                                 </a>
                                                             </td>
                                                         </tr>
