--- a/evoks/theme/templates/base.html
+++ b/evoks/theme/templates/base.html
@@ -27,6 +27,7 @@
         {% include "sidebars/desktop.html" %}
 
         <div class="flex-1 max-w-7xl mx-auto w-0 flex flex-col md:px-8 xl:px-0">
+			{% include "header/searchbar_globally.html" %}
 
 			<main class="flex-1 relative overflow-y-auto focus:outline-none">
 				<div class="py-6">
