--- a/evoks/theme/templates/base.html
+++ b/evoks/theme/templates/base.html
@@ -31,7 +31,7 @@
 
 			<main class="flex-1 relative overflow-y-auto focus:outline-none">
 				<div class="py-6">
-					<div class="px-4 sm:px-6 md:px-0">
+					<div class="px-4 sm:px-6 md:px-0 {% if search_results != None %} mt-6 {% endif %}">
 						<h1 class="text-2xl font-semibold text-gray-900">Vocabulary Dashboard</h1>
 					</div>
 					<div class="px-4 sm:px-6 md:px-0">
