--- a/evoks/theme/templates/sidebars/desktop.html
+++ b/evoks/theme/templates/sidebars/desktop.html
@@ -9,7 +9,7 @@
             <div class="flex-grow mt-5 flex flex-col">
                 <nav class="flex-1 bg-white px-2 space-y-1">
                     <!-- Current: "bg-gray-100 text-gray-900", Default: "text-gray-600 hover:bg-gray-50 hover:text-gray-900" -->
-                    <a href="#"
+                    <a href="/vocabularies"
                         class="bg-gray-100 text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
                         <svg class="text-gray-500 mr-3 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg"
                             fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
@@ -19,7 +19,7 @@
                         Dashboard
                     </a>
 
-                    <a href="#"
+                    <a href="/teams"
                         class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
                         <!-- Heroicon name: outline/users -->
                         <svg class="text-gray-400 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6"
@@ -31,7 +31,7 @@
                         Teams
                     </a>
 
-                    <a href="#"
+                    <a href="/help"
                         class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-sm font-medium">
                         <!-- Heroicon name: outline/folder -->
                         <svg class="text-gray-400 group-hover:text-gray-500 mr-3 flex-shrink-0 h-6 w-6"
