--- a/evoks/theme/templates/sidebars/mobile.html
+++ b/evoks/theme/templates/sidebars/mobile.html
@@ -22,7 +22,7 @@
         </div>
         <div class="mt-5 flex-1 h-0 overflow-y-auto">
             <nav class="px-2 space-y-1">
-                <a href="#"
+                <a href="/vocabularies"
                     class="bg-gray-100 text-gray-900 group rounded-md py-2 px-2 flex items-center text-base font-medium">
 
                     <svg class="text-gray-500 mr-4 flex-shrink-0 h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none"
@@ -33,7 +33,7 @@
                     Dashboard
                 </a>
 
-                <a href="#"
+                <a href="/teams"
                     class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-base font-medium">
                     <!-- Heroicon name: outline/users -->
                     <svg class="text-gray-400 group-hover:text-gray-500 mr-4 flex-shrink-0 h-6 w-6"
@@ -44,7 +44,7 @@
                     </svg>
                     Teams
                 </a>
-                <a href="#"
+                <a href="/help"
                     class="text-gray-600 hover:bg-gray-50 hover:text-gray-900 group rounded-md py-2 px-2 flex items-center text-base font-medium">
                     <!-- Heroicon name: outline/users -->
                     <svg class="text-gray-400 group-hover:text-gray-500 mr-4 flex-shrink-0 h-6 w-6"
