--- a/evoks/theme/templates/header/searchbar.html
+++ b/evoks/theme/templates/header/searchbar.html
@@ -58,11 +58,8 @@
                     id="profile-menu">
 
                     <!-- Active: "bg-gray-100", Not Active: "" -->
-                    <a href="#" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                        id="user-menu-item-0">Your Profile</a>
-
-                    <a href="#" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
-                        id="user-menu-item-1">Settings</a>
+                    <a href="/profile" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
+                        id="user-menu-item-0">Profile Settings</a>
 
                     <a href="#" class="block py-2 px-4 text-sm text-gray-700" role="menuitem" tabindex="-1"
                         id="user-menu-item-2">Sign out</a>
