--- a/evoks/theme/templates/modals/kick_all_members.html
+++ b/evoks/theme/templates/modals/kick_all_members.html
@@ -1,5 +1,5 @@
 <div class="fixed z-50 inset-0 overflow-y-auto invisible" aria-labelledby="modal-title" role="dialog"
-    id="delete-team-modal" aria-modal="true">
+    id="kick-all-members-modal" aria-modal="true">
 
     <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
         <!--
@@ -42,23 +42,22 @@
                 </div>
                 <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
                     <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-title">
-                        Delete Team
+                        Kick all members
                     </h3>
                     <div class="mt-2">
                         <p class="text-sm text-gray-500">
-                            Are you sure you want to delete this team? All of your data will be permanently
-                            removed from our servers forever. This action cannot be undone.
+                            Are you sure you want to kick all members? They won't be part of this team and loose the permissions on vocabularies connected with this team.
                         </p>
                     </div>
                 </div>
             </div>
             <form method='POST' action="">{% csrf_token %}
             <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
-                <button type="submit" name="delete" 
+                <button type="submit" name="kick-all" 
                     class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
                     Delete
                 </button>
-                <button type="button" id="delete-team-modal-cancel" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:text-gray-500 focus:outline-none 
+                <button type="button" id="kick-all-members-modal-cancel" class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:text-gray-500 focus:outline-none 
           focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm ">
                     Cancel
                 </button>
@@ -70,7 +69,7 @@
 </div>
 
 <script type="text/javascript">
-    document.getElementById("delete-team-modal-cancel").addEventListener("click", function (e) {
-        document.getElementById("delete-team-modal").classList.toggle("invisible");
+    document.getElementById("kick-all-members-modal-cancel").addEventListener("click", function (e) {
+        document.getElementById("kick-all-members-modal").classList.toggle("invisible");
     });
 </script>
