--- a/evoks/theme/templates/profile.html
+++ b/evoks/theme/templates/profile.html
@@ -38,35 +38,45 @@
                         <!-- Replace with your content -->
                         <div class="py-4">
 
-                            <form class="space-y-8">
-                                <div class="space-y-8">
+
+                            <div class="space-y-8">
+                                <div>
                                     <div>
-                                        <div>
 
-                                            <p class="mt-1 text-sm text-gray-500">
-                                                This information will be public!
-                                            </p>
-                                        </div>
-
+                                        <p class="mt-1 text-sm text-gray-500">
+                                            This information will be public!
+                                        </p>
+                                    </div>
+                                    <form method="POST" action="">{% csrf_token %}
                                         <div class="mt-6 grid grid-cols-1 gap-y-6 gap-x-4 sm:grid-cols-6">
                                             <div class="sm:col-span-3">
                                                 <label for="name" class="block text-sm font-medium text-gray-700">
                                                     Name
                                                 </label>
+
                                                 <div class="mt-1">
                                                     <input id="name" name="name" type="text" autocomplete="given-name"
+                                                        value="{{profile.name}}"
                                                         class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md">
+                                                    <!--{{form.name}} !-->
                                                 </div>
+
                                             </div>
                                         </div>
+
+
+
 
                                         <div class="sm:col-span-6 mt-5">
                                             <label for="about" class="block text-sm font-medium text-gray-700">
                                                 About
                                             </label>
                                             <div class="mt-1">
-                                                <textarea id="about" name="about" rows="3"
-                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+                                                <textarea id="about" name="about" type="text" rows="3"
+                                                    value="{{profile.description}}"
+                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border border-gray-300 rounded-md">{{profile.description}}
+                                                </textarea>
+
                                             </div>
                                             <p class="mt-2 text-sm text-gray-500">Write a few sentences about
                                                 yourself.</p>
@@ -91,11 +101,12 @@
                                             </div>
                                             <div class="pt-5">
                                                 <div class="flex justify-end">
-                                                    <button type="button"
+                                                    <button type="button" name="cancel-button"
+                                                        onClick="window.location.href=window.location.href"
                                                         class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                                         Cancel
                                                     </button>
-                                                    <button type="submit"
+                                                    <button type="submit" name='save'
                                                         class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500">
                                                         Save
                                                     </button>
@@ -147,7 +158,7 @@
                                                             </p>
                                                         </div>
                                                         <div class="mt-5">
-                                                            <button type="button"
+                                                            <button type="submit" name="data"
                                                                 class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-green-700 bg-green-100 hover:bg-green-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 sm:text-sm">
                                                                 Download data
                                                             </button>
@@ -156,16 +167,17 @@
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-
+                                    </form>
                                 </div>
+
+                            </div>
 
                         </div>
                     </div>
                 </div>
 
 
-                </form>
+
 
 
 
