--- a/evoks/theme/templates/team_detail.html
+++ b/evoks/theme/templates/team_detail.html
@@ -32,13 +32,13 @@
             <main class="flex-1 relative focus:outline-none">
                 <div class="py-6">
                     <div class="px-4 sm:px-6 md:px-0">
-                        <h1 class="text-2xl font-semibold text-gray-900">Vokabular Fans</h1>
+                        <h1 class="text-2xl font-semibold text-gray-900">{{team.name}}</h1>
                     </div>
                     <div class="px-4 sm:px-6 md:px-0">
                         <!-- Replace with your content -->
                         <div class="py-4">
 
-                            <form class="space-y-8 divide-y divide-gray-200">
+                            
                                 <div class="space-y-8 divide-y divide-gray-200">
                                     <div>
 
@@ -49,7 +49,9 @@
                                                     <div
                                                         class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
                                                         <table class="min-w-full divide-y divide-gray-200">
+                                                        <form method='POST' action="">{% csrf_token %}  
                                                             <thead class="bg-gray-50">
+                                                                
                                                                 <tr>
                                                                     <th scope="col"
                                                                         class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -67,8 +69,9 @@
                                                                 </tr>
                                                             </thead>
                                                             <tbody class="bg-white divide-y divide-gray-200">
+                                                                {% for mem in member_page %}
                                                                 <tr>
-
+                                                                    
                                                                     <td class="px-6 py-4 whitespace-nowrap">
                                                                         <div class="flex items-center">
                                                                             <div class="flex-shrink-0 h-10 w-10">
@@ -79,10 +82,10 @@
                                                                             <div class="ml-4">
                                                                                 <div
                                                                                     class="text-sm font-medium text-gray-900">
-                                                                                    Jane Cooper
+                                                                                    {{mem.profile.name}}
                                                                                 </div>
                                                                                 <div class="text-sm text-gray-500">
-                                                                                    jane.cooper@example.com
+                                                                                    {{mem.email}}
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -90,57 +93,75 @@
 
                                                                     <td
                                                                         class="px-6 py-4 whitespace-nowrap text-sm text-gray-500 ">
-                                                                        Member
+                                                                        {% if mem == owner %} Owner
+                                                                        {% else %} Member 
+                                                                        {% endif %}
                                                                     </td>
                                                                     <td
                                                                         class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
 
-                                                                        <button type="button"
+                                                                        <button type="submit" name="kick" value="{{mem.email}}"
                                                                             class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm hidden md:table-cell">
                                                                             Kick
                                                                         </button>
 
                                                                     </td>
-
+                                                                    {% endfor %}
                                                                 </tr>
                                                                 <!-- More people... -->
+
                                                             </tbody>
+                                                        </form>
                                                         </table>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-
+                                        <form method='POST' action="">{% csrf_token %}
                                         <!-- This example requires Tailwind CSS v2.0+ -->
                                         <nav class="bg-white px-4 py-3 flex items-center justify-between sm:px-6 mt-5"
                                             aria-label="Pagination">
                                             <div class="hidden sm:block">
                                                 <p class="text-sm text-gray-700">
                                                     Showing
-                                                    <span class="font-medium">1</span>
+                                                    <span class="font-medium">{{member_page.start_index}}</span>
                                                     to
-                                                    <span class="font-medium">10</span>
+                                                    <span class="font-medium">{{member_page.end_index}}</span>
                                                     of
-                                                    <span class="font-medium">20</span>
+                                                    <span class="font-medium">{{member.count}}</span>
                                                     results
                                                 </p>
                                             </div>
                                             <div class="flex-1 flex justify-between sm:justify-end">
-                                                <a href="#"
+                                                {% if member_page.has_previous %}
+                                                <button type="submit" name="page" value="{{member_page.previous_page_number  }}"
                                                     class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                                                     Previous
-                                                </a>
-                                                <a href="#"
+                                                </button>
+                                                {% else %}
+                                                <button type="submit" name="page" value="{{member_page  }}"
+                                                    class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                                                    Previous
+                                                </button>
+                                                {%endif%}
+                                                {% if member_page.has_next %}
+                                                <button type="submit" name='page' value='{{member_page.next_page_number}}'
                                                     class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                                                     Next
-                                                </a>
+                                                </button>
+                                                {% else %}
+                                                <button type="submit" name='page' value='{{member_page}}'
+                                                    class="ml-3 relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                                                    Next
+                                                </button>
+                                                {%endif%}
                                             </div>
                                         </nav>
-
+                                        </form>
                                         <div class="grid grid-cols-6 gap-6 mt-5">
 
                                             <div class="col-span-6 sm:col-span-3">
-
+                                                <form method='POST' action="">{% csrf_token %}
                                                 <!-- This example requires Tailwind CSS v2.0+ -->
                                                 <div class="bg-white shadow sm:rounded-lg">
                                                     <div class="px-4 py-5 sm:p-6">
@@ -155,38 +176,44 @@
                                                             </div>
                                                         </div>
                                                         <div class="mt-5">
-                                                            <button type="button"
+                                                            <button type="submit" name='invite'
                                                                 class="inline-flex items-center justify-center px-10 py-2 border border-transparent font-medium rounded-md text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
                                                                 Invite
                                                             </button>
                                                         </div>
                                                     </div>
                                                 </div>
+                                                </form>
                                             </div>
                                             <div class="col-span-6 sm:col-span-3">
 
                                                 <!-- This example requires Tailwind CSS v2.0+ -->
-                                                <div class="bg-white shadow sm:rounded-lg">
-                                                    <div class="px-4 py-5 sm:p-6">
-                                                        <div>
-                                                            <label for="email"
-                                                                class="block text-sm font-medium text-gray-700">Change
-                                                                team
-                                                                description</label>
-                                                            <div class="mt-1">
-                                                                <input type="text" name="email" id="email"
-                                                                    class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
-                                                                    placeholder="We live in spain">
+                                                <form method='POST' action="">{% csrf_token %}
+                                                    <div class="bg-white shadow sm:rounded-lg">
+                                                        <div class="px-4 py-5 sm:p-6">
+
+                                                            <div>
+                                                                <label for="description"
+                                                                    class="block text-sm font-medium text-gray-700">Change
+                                                                    team
+                                                                    description </label>
+                                                                <div class="mt-1">
+                                                                    <input type="text" name="description"
+                                                                        id="description"
+                                                                        class="shadow-sm focus:ring-gray-500 focus:border-gray-500 block w-full sm:text-sm border-gray-300 rounded-md"
+                                                                        placeholder="{{team.groupprofile.description}}">
+                                                                </div>
                                                             </div>
-                                                        </div>
-                                                        <div class="mt-5">
-                                                            <button type="button"
-                                                                class="inline-flex items-center justify-center px-10 py-2 border border-transparent font-medium rounded-md text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
-                                                                Save
-                                                            </button>
+                                                            <div class="mt-5">
+                                                                <button type="submit" name='save' 
+                                                                    class="inline-flex items-center justify-center px-10 py-2 border border-transparent font-medium rounded-md text-white bg-regal-blue focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
+                                                                    Save
+                                                                </button>
+                                                            </div>
+
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
@@ -194,7 +221,7 @@
 
 
 
-
+                                    <form method='POST' action="">{% csrf_token %}    
                                     <div class="grid grid-cols-6 gap-6 mt-5">
 
                                         <div class="col-span-6 sm:col-span-3">
@@ -203,7 +230,7 @@
                                             <div class="bg-white shadow sm:rounded-lg">
                                                 <div class="px-4 py-5 sm:p-6">
                                                     <h3 class="text-lg leading-6 font-medium text-gray-900">
-                                                        Delete "Vocabulary Fans KIT"
+                                                        Delete {{team.name}}
                                                     </h3>
                                                     <div class="mt-2 max-w-xl text-sm text-gray-500">
                                                         <p>
@@ -235,7 +262,7 @@
                                                         </p>
                                                     </div>
                                                     <div class="mt-5">
-                                                        <button type="button"
+                                                        <button type="submit" name="kick_all"
                                                             class="inline-flex items-center justify-center px-4 py-2 border border-transparent font-medium rounded-md text-red-700 bg-red-100 hover:bg-red-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:text-sm">
                                                             Kick all members
                                                         </button>
@@ -244,7 +271,9 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <form method='POST' action="">{% csrf_token %}
                                 </div>
+                            </form>
                         </div>
                     </div>
 
@@ -252,8 +281,8 @@
 
                 </div>
 
-               
-                </form>
+
+                
 
 
 
