--- a/evoks/theme/templates/signup.html
+++ b/evoks/theme/templates/signup.html
@@ -55,8 +55,8 @@
                         <input id="remember-me" name="remember-me" type="checkbox"
                             class="h-4 w-4 text-regal-blue focus:ring-gray-500 border-gray-300 rounded">
                         <label for="remember-me" class="ml-2 block text-sm text-gray-900">
-                            Accept <a class="text-regal-blue" href='tos'> ToS</a> & <a class="text-regal-blue"
-                                href="privacy"> Privacy Policy</a>
+                            Accept <a href="{% url 'ToS' %}" class="text-regal-blue"> ToS</a> <!--& <a class="text-regal-blue"
+                                href="privacy"> Privacy Policy</a> !-->
                         </label>
                     </div>
                     <!-- Das hier dann in login benutzen:)-->
